--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     ports:
-      - "3000:3000"
+      - '${FRONTEND_APP_PORT:-5000}:5000'
     volumes:
       - ./src:/usr/src/app/src
       - ./public:/usr/src/app/public
